[project]
name = "adaptive-genai-perf"
version = "0.1.0"
description = "GenAI Performance Benchmarking Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "genai-perf>=0.0.15",
    "mypy>=1.16.1",
    "pandas-stubs>=2.3.0.250703",
    "types-seaborn>=0.13.2.20250516",
    "types-requests>=2.32.4.20250611",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
