[project]
name = "web-perf"
version = "0.1.0"
description = "Scalable performance testing suite for API endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "httpx>=0.28.1",
    "locust>=2.38.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "typer>=0.16.0",
]

[project.scripts]
web-perf = "web_perf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "types-pyyaml>=6.0.12.20250809",
    "types-requests>=2.32.4.20250809",
]
