[project]
name = "adaptive"
version = "0.1.0"
description = ""
authors = [{ name = "Botir Khaltaev", email = "ZLAC172@live.rhul.ac.uk" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic (>=2.11.2,<3.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "mypy (>=1.15.0,<2.0.0)",
  "ruff (>=0.11.3,<0.12.0)",
  "black (>=25.1.0,<26.0.0)",
  "pytest (>=8.3.5,<9.0.0)",
]

[tool.poetry]
packages = [{ include = "adaptive", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
